SonarCloud trouble fix #1